--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/forms": "^20.1.4",
     "@angular/platform-browser": "^20.1.4",
     "@angular/router": "^20.1.4",
+    "@popperjs/core": "^2.11.8",
     "@tauri-apps/api": "^2.8.0",
     "@tauri-apps/plugin-opener": "^2",
     "bootstrap": "^5.3.8",
